# Claude-Quota-Trace

./: CONTRIBUTING.md  LICENSE  README.md  api_service.py  ball_window.py  floatBall.document  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  settings_dialog.py  setup.py  start.sh  stop.sh
floating_ball/: __init__.py  api_service.py  auth_service.py  ball_window.py  main.py  settings_dialog.py
floating_ball/themes/: __init__.py  base_theme.py  color_themes.py  glacier_test_theme.py  glacier_theme.py  music  opus_audio.py  space_test_theme.py  space_theme.py
scripts/: debug_api.py  fix_visibility.py  test_api.py  test_curl_cffi.py  test_headless.py  test_login.py  test_playwright_api.py
themes/: README.md  __init__.py  circle_theme.py  opus_theme.py  space_test_theme.py  space_theme.py  water_theme.py
themes/music/: LICENSE.txt
