[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floating-ball"
version = "1.0.0"
description = "A macOS floating desktop widget that displays Claude API subscription usage in real-time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Floating Ball Contributors" }
]
keywords = ["claude", "api", "usage", "monitor", "widget", "desktop", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.6.0",
    "curl_cffi>=0.6.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
]

[project.scripts]
floating-ball = "floating_ball.main:main"

[project.urls]
Homepage = "https://github.com/floating-ball/floating-ball"
Repository = "https://github.com/floating-ball/floating-ball"

[tool.setuptools.packages.find]
where = ["."]
include = ["floating_ball*"]
